# FrameShift

./: .gitignore  .mcp.json  Cargo.toml  README.md
.gemini/: settings.json
.githooks/: pre-push
.github/workflows/: ci.yml  mirror.yml  release.yml
agents/: AGENTS.md
architecture/: AGENTS.md
bots/: sync.sh
crates/frameshift-capabilities/: Cargo.toml
crates/frameshift-capabilities/src/: filter.rs  tracker.rs
crates/frameshift-catalog/: Cargo.toml
crates/frameshift-catalog-postgres/: Cargo.toml
crates/frameshift-catalog-postgres/migrations/2026-05-13-000000_initial_schema/: up.sql
crates/frameshift-catalog-postgres/migrations/2026-05-13-000001_search_indexes/: up.sql
crates/frameshift-catalog-postgres/migrations/2026-05-31-000000_telemetry/: down.sql  up.sql
crates/frameshift-catalog-postgres/migrations/2026-06-04-000000_add_pack_downloads/: down.sql  up.sql
crates/frameshift-catalog-postgres/migrations/2026-07-20-000000_add_signed_request_nonces/: down.sql  up.sql
crates/frameshift-catalog-postgres/migrations/2026-07-23-000000_add_account_substrate/: down.sql  up.sql
crates/frameshift-catalog-postgres/migrations/2026-07-24-000000_enable_publisher_pack_writes/: down.sql  up.sql
crates/frameshift-catalog-postgres/src/: backend.rs  config.rs  errors.rs  lib.rs  models.rs  ownership_backfill.rs  pool.rs  schema.rs
crates/frameshift-catalog-postgres/tests/: postgres_integration.rs
crates/frameshift-catalog/src/: backend.rs  error.rs  identity.rs  lib.rs  records.rs
crates/frameshift-cli/: Cargo.toml
crates/frameshift-cli/src/: main.rs  util.rs
crates/frameshift-cli/src/cmd/: automate.rs  config.rs  diff.rs  feedback.rs  grow.rs  keys.rs  migrate.rs  mod.rs  prefs.rs  publish.rs  register.rs  render.rs  rule.rs  search.rs  select.rs  skill.rs  telemetry.rs  use_persona.rs  vault.rs  verify.rs
crates/frameshift-client/: Cargo.toml
crates/frameshift-client/src/: compose_support.rs  error.rs  identity.rs  lib.rs  model.rs  publish.rs  publisher.rs  registry.rs  selection.rs  telemetry.rs
crates/frameshift-client/tests/: compose_render.rs  install_flow.rs  materialize_resilience.rs  memory_requirement.rs  project_id_env.rs  registry_install.rs  template_render.rs
crates/frameshift-compose/src/: composed.rs  composer.rs  conflict.rs  merge.rs  resolver.rs
crates/frameshift-conformance/: Cargo.toml
crates/frameshift-conformance/src/: caller.rs  case.rs  cli_runner.rs  gate.rs  lib.rs  score.rs
crates/frameshift-daemon/: Cargo.toml
crates/frameshift-daemon/src/: handler.rs  lib.rs  main.rs  orchestrator.rs  protocol.rs  socket.rs  watcher.rs
crates/frameshift-embed-candle/: Cargo.toml
crates/frameshift-embed-candle/src/: lib.rs
crates/frameshift-growth/src/: lib.rs
crates/frameshift-mcp/: Cargo.toml
crates/frameshift-mcp/src/: context.rs  lib.rs  main.rs  prompts.rs  protocol.rs  tools.rs
crates/frameshift-memory/: Cargo.toml
crates/frameshift-memory-http/: Cargo.toml
crates/frameshift-memory-http/docs/: WIRE.md
crates/frameshift-memory-http/src/: adapter.rs  dto.rs  lib.rs  tests.rs
crates/frameshift-memory-sqlite-fts/: Cargo.toml
crates/frameshift-memory-sqlite-fts/src/: adapter.rs  error.rs  lib.rs
crates/frameshift-memory-sqlite-fts/tests/: roundtrip.rs
crates/frameshift-objects/: Cargo.toml
crates/frameshift-objects-fs/: Cargo.toml
crates/frameshift-objects-r2/: Cargo.toml
crates/frameshift-objects-r2/src/: lib.rs
crates/frameshift-objects/src/: lib.rs  store.rs
crates/frameshift-pack/: Cargo.toml
crates/frameshift-runtime/: Cargo.toml
crates/frameshift-runtime/src/: capability.rs  error.rs  lib.rs  runtime.rs
crates/frameshift-runtime/tests/: integration.rs
crates/frameshift-seed/: Cargo.toml
crates/frameshift-seed/src/: main.rs
crates/frameshift-server/: Cargo.toml
crates/frameshift-template/: Cargo.toml
crates/frameshift-vault/: Cargo.toml
crates/frameshift-vault-local/: Cargo.toml
crates/frameshift-vault-local/src/: lib.rs
crates/personify-runtime/: Cargo.toml
crates/personify-runtime/src/: capability.rs  error.rs  lib.rs  runtime.rs  source.rs
crates/personify-runtime/tests/: integration.rs
deploy/: frameshift-backup-receive.sh  frameshift-backup.service  frameshift-backup.sh  frameshift-backup.timer  frameshift-server.service
desktop/: AGENTS.md
devops/: AGENTS.md
devtools/: AGENTS.md
docs/: API_COMPATIBILITY.md
lab/: AGENTS.md
memory/: AGENTS.md
performance/: AGENTS.md
personas/: README.md
personas/accessibility-engineer/: pack.toml
personas/agents/: pack.toml
personas/api-integrator/: pack.toml
personas/architecture/: pack.toml
personas/bots/: pack.toml
personas/commit-curator/: pack.toml
personas/creative/: pack.toml
personas/cryptographic/: pack.toml
personas/daily-planner/: pack.toml
personas/data/: pack.toml
personas/database/: pack.toml
personas/dep-updater/: pack.toml
personas/desktop/: pack.toml
personas/devops/: pack.toml
personas/devtools/: pack.toml
personas/embedded/: pack.toml
personas/frontend/: pack.toml
personas/gatekeeper/: pack.toml
personas/go-engineer/: pack.toml
personas/incident-commander/: pack.toml
personas/issue-triager/: pack.toml
personas/journal-keeper/: pack.toml
personas/kleos-archaeologist/: pack.toml
personas/lab/: pack.toml
personas/memory/: pack.toml
personas/mobile-dev/: pack.toml
personas/orchestrator/: pack.toml
personas/performance/: pack.toml
personas/pr-author/: pack.toml
personas/product-strategist/: pack.toml
personas/python-engineer/: pack.toml
personas/research/: pack.toml
personas/reviewer/: pack.toml
personas/rust/: pack.toml
personas/security/: pack.toml
personas/systems/: pack.toml
personas/testing/: pack.toml
personas/typescript-engineer/: pack.toml
personas/unreal/: pack.toml
personas/visual-director/: pack.toml
personas/writer/: pack.toml
research/: AGENTS.md
reviewer/: AGENTS.md
rust/: AGENTS.md  GROWTH.md  sync.sh
scripts/: preflight.sh
systems/: AGENTS.md
testing/: AGENTS.md
writer/: AGENTS.md
(+81 files in other folders)
