[package]
name = "frameshift-catalog-postgres"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Postgres adapter for the frameshift catalog backend"

[dependencies]
frameshift-catalog = { path = "../frameshift-catalog" }
frameshift-pack = { path = "../frameshift-pack" }
diesel = { workspace = true }
diesel-async = { workspace = true }
diesel_migrations = { workspace = true }
bb8 = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
clap = { workspace = true }
# diesel-async 0.5.2 uses futures_util::try_join! but omits the async-await feature
# from its own Cargo.toml. Adding it here forces the feature enabled for the whole
# build graph, which fixes the compilation error in diesel-async's pg module.
futures-util = { version = "0.3", features = ["async-await"] }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }
