[package]
name = "frameshift-cli"
version = "0.9.9"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Thin CLI for the frameshift client engine"

[[bin]]
name = "frameshift"
path = "src/main.rs"

[dependencies]
frameshift-client = { path = "../frameshift-client" }
frameshift-source = { path = "../frameshift-source" }
frameshift-growth = { path = "../frameshift-growth" }
frameshift-conformance = { path = "../frameshift-conformance", features = ["cli-runner"] }
frameshift-orchestrator = { path = "../frameshift-orchestrator" }
frameshift-embed-candle = { path = "../frameshift-embed-candle", optional = true }
clap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[features]
# Semantic selection via a local candle sentence-embedding model. Off by
# default so the standard build stays free of the ML dependency stack.
embeddings = ["dep:frameshift-embed-candle"]

[dev-dependencies]
tempfile = { workspace = true }
