[package]
name = "frameshift-cli"
version = "0.9.9"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Thin CLI for the frameshift client engine"

[[bin]]
name = "frameshift"
path = "src/main.rs"

[dependencies]
frameshift-client = { path = "../frameshift-client" }
frameshift-source = { path = "../frameshift-source" }
frameshift-growth = { path = "../frameshift-growth" }
# cli-runner is enabled intentionally: the shipped `frameshift` binary supports
# `verify --runner cli`. The feature stays off in the conformance crate's own
# default set; `mock` remains the default runner and the mock/CI path is unchanged.
frameshift-conformance = { path = "../frameshift-conformance", features = ["cli-runner"] }
frameshift-orchestrator = { path = "../frameshift-orchestrator" }
frameshift-embed-candle = { path = "../frameshift-embed-candle", optional = true }
# `frameshift vault` subcommand: vault schema/error/backend-trait types and the
# age-encrypted local backend (init/set/get/rm/list operate on these directly).
frameshift-vault = { path = "../frameshift-vault" }
frameshift-vault-local = { path = "../frameshift-vault-local" }
clap = { workspace = true }
# Wraps the vault passphrase/value input so it is never accidentally logged.
secrecy = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
# Structured logging for best-effort paths (e.g. telemetry/selection-history
# recording) that must warn on failure without failing the command.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Hidden-input prompts for `frameshift vault` passphrases/values and the
# render-time interactive vault provider (only used when stdin is a TTY).
rpassword = { workspace = true }

[features]
# Semantic selection via a local candle sentence-embedding model. Off by
# default so the standard build stays free of the ML dependency stack.
embeddings = ["dep:frameshift-embed-candle"]

[dev-dependencies]
tempfile = { workspace = true }
