[package]
name = "frameshift-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Client engine for installing and materializing frameshift packs"

[dependencies]
frameshift-pack = { path = "../frameshift-pack" }
# Persona composition (extends/mixin resolution) used at render time.
frameshift-compose = { path = "../frameshift-compose" }
# Typed persona source loading and deterministic markdown rendering.
frameshift-source = { path = "../frameshift-source" }
base64.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
serde.workspace = true
# JSON request bodies (author registration) and publish response parsing.
serde_json.workspace = true
sha2.workspace = true
# CSPRNG for author signing-key generation and signed-request nonces (mirrors frameshift-seed).
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
# Blocking HTTP client -- matches the sync `install` fn signature; avoids pulling tokio into this crate.
# The `json` feature provides `Response::into_json` for deserializing version records.
ureq = { version = "2", features = ["json"] }
# Tar/gzip extraction for registry pack archives.
tar = "0.4"
flate2 = "1"
# Temporary directory for registry pack extraction before caching.
tempfile.workspace = true

[dev-dependencies]
