[package]
name = "frameshift-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Client engine for installing and materializing frameshift packs"

[dependencies]
frameshift-pack = { path = "../frameshift-pack" }
# Persona composition (extends/mixin resolution) used at render time.
frameshift-compose = { path = "../frameshift-compose" }
# Typed persona source loading and deterministic markdown rendering.
frameshift-source = { path = "../frameshift-source" }
# Cross-version conformance-baseline comparison for the install-over-existing
# path (RegressionGate::evaluate_cross_version); default features only, no
# cli-runner (no `agy`/tokio-process dependency needed here).
frameshift-conformance = { path = "../frameshift-conformance" }
# Template manifest/placeholder parsing for `{{token}}` substitution in
# templated packs (those shipping `pack.template.toml`).
frameshift-template = { path = "../frameshift-template" }
# Vault schema/error/backend-trait types (`VaultData`, `VaultError`,
# `VaultBackend`, `validate`) consumed by the `VaultProvider` contract.
frameshift-vault = { path = "../frameshift-vault" }
# Ready-made `VaultProvider` constructors (`open_vault_with_passphrase`,
# `env_only_vault_provider`) open the project vault through the age-encrypted
# local backend; kept here (rather than pushed out to every caller) so the
# CLI, daemon, and MCP server share one passphrase-to-`VaultData` path.
frameshift-vault-local = { path = "../frameshift-vault-local" }
base64.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
# Wraps the vault passphrase so it is never accidentally `Debug`-printed or
# logged; matches how frameshift-vault-local's own recipients are typed.
secrecy.workspace = true
serde.workspace = true
# JSON request bodies (author registration) and publish response parsing.
serde_json.workspace = true
sha2.workspace = true
# CSPRNG for author signing-key generation and signed-request nonces (mirrors frameshift-seed).
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
# Blocking HTTP client -- matches the sync `install` fn signature; avoids pulling tokio into this crate.
# The `json` feature provides `Response::into_json` for deserializing version records.
ureq = { version = "2", features = ["json"] }
# Tar/gzip extraction for registry pack archives.
tar = "0.4"
flate2 = "1"
libc = "0.2"
# Temporary directory for registry pack extraction before caching.
tempfile.workspace = true

[dev-dependencies]
# Builds real PackRecord/PackVersionRecord fixtures for registry serde-pin tests.
frameshift-catalog = { path = "../frameshift-catalog" }
chrono.workspace = true
