[package]
name = "frameshift-conformance"
version = "0.1.0"
description = "Conformance test bundle schema, runner trait, scoring, and upgrade-regression gate"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
frameshift-pack = { path = "../frameshift-pack" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
sha2.workspace = true
hex.workspace = true
regex.workspace = true
tracing.workspace = true
tempfile = { version = "3", optional = true }

[features]
cli-runner = ["dep:tempfile", "tokio/process", "tokio/time"]

[dev-dependencies]
tempfile = "3"
