[package]
name = "frameshift-daemon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Background daemon for Frameshift: file watcher and JSON-RPC 2.0 IPC"

[[bin]]
name = "frameshift-daemon"
path = "src/main.rs"

[dependencies]
frameshift-client = { path = "../frameshift-client" }
frameshift-growth = { path = "../frameshift-growth" }
frameshift-orchestrator = { path = "../frameshift-orchestrator" }
frameshift-embed-candle = { path = "../frameshift-embed-candle", optional = true }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
notify.workspace = true
# Used for getuid() to authenticate Unix-socket peers by owning uid.
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true

[features]
# Semantic selection via a local candle sentence-embedding model. Off by
# default so the standard build stays free of the ML dependency stack.
embeddings = ["dep:frameshift-embed-candle"]
