[package]
name = "frameshift-mcp"
version = "0.10.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Minimal MCP stdio server for Frameshift persona operations"

[[bin]]
name = "frameshift-mcp"
path = "src/main.rs"

[dependencies]
frameshift-capabilities = { path = "../frameshift-capabilities" }
frameshift-client = { path = "../frameshift-client" }
frameshift-growth = { path = "../frameshift-growth" }
frameshift-orchestrator = { path = "../frameshift-orchestrator" }
frameshift-embed-candle = { path = "../frameshift-embed-candle", optional = true }
frameshift-pack = { path = "../frameshift-pack" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
# Semantic selection via a local candle sentence-embedding model. Off by
# default so the standard build stays free of the ML dependency stack.
embeddings = ["dep:frameshift-embed-candle"]
