[package]
name = "frameshift-objects-r2"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cloudflare R2 (S3-compatible) PackStore adapter for the frameshift object store trait"

[dependencies]
frameshift-objects = { path = "../frameshift-objects" }
frameshift-pack = { path = "../frameshift-pack" }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
bytes = "1"
object_store = { version = "0.13", features = ["aws"] }
secrecy = { workspace = true }
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
