[package]
name = "frameshift-vault-local"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Local age-encrypted file backend for frameshift-vault"

[dependencies]
frameshift-vault = { path = "../frameshift-vault" }
age.workspace = true
secrecy = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
