[package]
name = "personify-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Orchestration layer: load vault, parse template, validate tokens, render persona."

[dependencies]
personify-vault = { path = "../personify-vault" }
personify-template = { path = "../personify-template" }
personify-memory = { path = "../personify-memory" }
thiserror.workspace = true

[dev-dependencies]
